--- a/NovoMixPasseportSwift/FlexPenSubviews.xib
+++ b/NovoMixPasseportSwift/FlexPenSubviews.xib
@@ -48,6 +48,18 @@
                             <color key="textColor" red="0.023529411760000001" green="0.14901960780000001" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BSc-64-TTp">
+                            <rect key="frame" x="258" y="26" width="35" height="38"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
+                            <color key="textColor" red="0.1725741029" green="0.21834245320000001" blue="0.44677489999999997" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1U2-ag-VkB">
+                            <rect key="frame" x="38" y="190" width="35" height="38"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
+                            <color key="textColor" red="0.1725741029" green="0.21834245320000001" blue="0.44677489999999997" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <userDefinedRuntimeAttributes>
@@ -212,7 +224,7 @@ cHRpb24gZHUgbcOpZGVjaW4pLg
                     <rect key="frame" x="16" y="357" width="628" height="55"/>
                     <string key="text" base64-UTF8="YES">
 SW5qZWN0ZXIgbGEgdG90YWxpdMOpIGRlIGxhIGRvc2UgZW4gYXBwdXlhbnQgc3VyIGxlIGJvdXRvbi1w
-b3Vzc29pciADanVzcXXigJlhdSByZXRvdXIgw6AgMC4gQXR0ZW5kcmUgYXUgbWluaW11bSAxMCBzZWNv
+b3Vzc29pciADanVzcXXigJnDoCByZXRvdXIgw6AgMC4gQXR0ZW5kcmUgYXUgbWluaW11bSAxMCBzZWNv
 bmRlcyBhdmFudCBkZSByZXRpcmVyIGzigJlhaWd1aWxsZS4
 </string>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
@@ -246,6 +258,18 @@ bmRlcyBhdmFudCBkZSByZXRpcmVyIGzigJlhaWd1aWxsZS4
                             <color key="textColor" red="0.023529411760000001" green="0.14901960780000001" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7TU-Vn-6gN">
+                            <rect key="frame" x="254" y="20" width="35" height="38"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
+                            <color key="textColor" red="0.1725741029" green="0.21834245320000001" blue="0.44677489999999997" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Isf-1A-2EJ">
+                            <rect key="frame" x="36" y="200" width="35" height="38"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
+                            <color key="textColor" red="0.1725741029" green="0.21834245320000001" blue="0.44677489999999997" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <userDefinedRuntimeAttributes>
@@ -261,7 +285,7 @@ bmRlcyBhdmFudCBkZSByZXRpcmVyIGzigJlhaWd1aWxsZS4
                     <rect key="frame" x="652" y="367" width="190" height="50"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="إرجاع الأنسولين مباشرة قبل استعمالها مجددا يجب أن يكون لون السائل أبيض وغير شفاف" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82C-Tc-XFW">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="إرجاع الأنسولين مباشرة قبل إستعمالها مجددا يجب أن يكون لون السائل أبيض وغير شفاف" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82C-Tc-XFW">
                     <rect key="frame" x="8" y="362" width="601" height="55"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="22"/>
                     <color key="textColor" red="0.12549019610000001" green="0.49803921569999998" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
@@ -273,7 +297,7 @@ bmRlcyBhdmFudCBkZSByZXRpcmVyIGzigJlhaWd1aWxsZS4
                         <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="agiter1" translatesAutoresizingMaskIntoConstraints="NO" id="IAO-2x-fgo">
                             <rect key="frame" x="20" y="20" width="280" height="230"/>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="فرك القلم 10 مرات بين الأياد" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Zm-La-usM">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="فرك القلم 10 مرات بين الأيادي" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Zm-La-usM">
                             <rect key="frame" x="20" y="258" width="280" height="66"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="22"/>
                             <color key="textColor" red="0.023529411760000001" green="0.14901960780000001" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -380,7 +404,7 @@ bmRlcyBhdmFudCBkZSByZXRpcmVyIGzigJlhaWd1aWxsZS4
                     <rect key="frame" x="652" y="367" width="190" height="50"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="يتم الإختيار من وحدة إلى  أخرى إلى غاية 60 وحدة (حسب وصفة الطبيب)." textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AS1-5I-t6n">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="يتم الإختيار من وحدة إلى أخرى إلى غاية 60 وحدة (حسب وصفة الطبيب)." textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AS1-5I-t6n">
                     <rect key="frame" x="16" y="355" width="577" height="57"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="19"/>
                     <color key="textColor" red="0.12549019610000001" green="0.49803921569999998" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
@@ -424,7 +448,8 @@ bmRlcyBhdmFudCBkZSByZXRpcmVyIGzigJlhaWd1aWxsZS4
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLr-Oq-P8d">
                     <rect key="frame" x="16" y="354" width="585" height="58"/>
-                    <string key="text">حقن الجرعة بأكملها بالضغط على الزر إلى غاية نقطة الرجوع 0.يرجى الإنتظار لمدة 6 ثواني على الأقل قبل سحب الإبرة.</string>
+                    <string key="text">حقن الجرعة بأكملها بالضغط على الزر إلى غاية نقطة الرجوع 0.
+يرجى الإنتظار لمدة 6 ثواني على الأقل قبل سحب الإبرة.</string>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="21"/>
                     <color key="textColor" red="0.12549019610000001" green="0.49803921569999998" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
